--- a/resources/assets/sass/_buttons.scss
+++ b/resources/assets/sass/_buttons.scss
@@ -93,7 +93,7 @@ fieldset[disabled] .btn-primary.active {
 .btn-twitch {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-twitch:hover,
@@ -139,7 +139,7 @@ fieldset[disabled] .btn-twitch.active {
 .btn-youtube {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-youtube:hover,
@@ -185,7 +185,7 @@ fieldset[disabled] .btn-youtube.active {
 .btn-twitter {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-twitter:hover,
@@ -231,7 +231,7 @@ fieldset[disabled] .btn-twitter.active {
 .btn-facebook {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-facebook:hover,
@@ -277,7 +277,7 @@ fieldset[disabled] .btn-facebook.active {
 .btn-instagram {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-instagram:hover,
@@ -323,7 +323,7 @@ fieldset[disabled] .btn-instagram.active {
 .btn-steam {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-steam:hover,
@@ -369,7 +369,7 @@ fieldset[disabled] .btn-steam.active {
 .btn-google-plus {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-google-plus:hover,
@@ -415,7 +415,7 @@ fieldset[disabled] .btn-google-plus.active {
 .btn-github {
     color: #ffffff !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-github:hover,
@@ -461,7 +461,7 @@ fieldset[disabled] .btn-github.active {
 .btn-snapchat {
     color: #ffffff !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-snapchat:hover,
@@ -507,7 +507,7 @@ fieldset[disabled] .btn-snapchat.active {
 .btn-spotify {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-spotify:hover,
@@ -553,7 +553,7 @@ fieldset[disabled] .btn-spotify.active {
 .btn-reddit {
     color: $text-color !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-reddit:hover,
@@ -599,7 +599,7 @@ fieldset[disabled] .btn-reddit.active {
 .btn-pinterest {
     color: #ffffff !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-pinterest:hover,
@@ -645,7 +645,7 @@ fieldset[disabled] .btn-pinterest.active {
 .btn-skype {
     color: #ffffff !important;
     background-color: $background-color;
-    border-color: $laravel-border-color;
+    border-color: $pannel-border-color;
 }
 
 .btn-skype:hover,
